# casgrain

./: .gitignore  .gitleaks.toml  AGENT.md  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny.toml  renovate.json  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md  runner-host-advisory-sources.json  runner-host-watch.json  security-tooling-watch.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android-emulator-smoke.yml  codeql.yml  cve-watch.yml  ios-simulator-smoke.yml  rust-ci.yml  security.yml
crates/android/: Cargo.toml
crates/android/src/: command.rs  lib.rs  paths.rs  plan_validation.rs  runtime.rs  test_support.rs  tests.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/casgrain/: Cargo.toml
crates/casgrain/src/: cli.rs  main.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: compile.rs  fixture_vocabulary.rs  generic_lowering.rs  lib.rs  phrase_helpers.rs  tests.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/ios/: Cargo.toml
crates/ios/src/: adapter.rs  command.rs  lib.rs  paths.rs  plan_validation.rs  runtime.rs  test_support.rs  tests.rs
crates/mar_android/: Cargo.toml
crates/mar_android/src/: lib.rs
crates/mar_application/: Cargo.toml
crates/mar_application/src/: lib.rs
crates/mar_cli/: Cargo.toml
crates/mar_cli/src/: main.rs
crates/mar_compiler/: Cargo.toml
crates/mar_compiler/src/: lib.rs
crates/mar_domain/: Cargo.toml
crates/mar_domain/src/: lib.rs
crates/mar_ios/: Cargo.toml
crates/mar_ios/src/: lib.rs
crates/mar_runner/: Cargo.toml
crates/mar_runner/src/: lib.rs  mock.rs
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs  mock.rs
docs/: validation.md
docs/architecture/: clean-architecture.md  product-naming-and-ui-governance.md  rust-domain-model-and-scaffolding.md
docs/branding/: name-exploration.md
docs/development/: automation-agent-operations.md  backlog-and-spec-workflow.md  bug-reproduction-evidence-contract.md  cve-watch-operations.md  merge-and-validation-policy.md  rust-coding-guide.md  security-automation-plan.md  security-owasp-baseline.md  test-pyramid-and-runtime-contracts.md
docs/gherkin/: engine-and-compilation.feature
docs/openspec/: agent-workflows.feature  demo-login.feature  engine-and-compilation.feature
docs/plans/: 2026-04-12-execution-plan-foundation.md  2026-04-13-full-ios-vertical-slice.md  current-plan.md  initial-roadmap.md
docs/prd/: product-requirements.md
docs/specs/: casgrain-product-spec.md
docs/specs/issues/: README.md  _template.md  issue-122-android-smoke-reliability-window-report.md  issue-124-runner-host-drift-watch.md  issue-127-android-smoke-reliability-issue-sync.md  issue-129-runner-host-advisory-source-rules.md  issue-142-android-runner-host-source-split.md  issue-80-android-smoke-docs-and-policy-reconciliation.md
fixtures/android-smoke/: README.md
fixtures/android-smoke/app/: README.md  build.gradle.kts
fixtures/android-smoke/features/: tap_counter.feature
fixtures/ios-smoke/: README.md
fixtures/ios-smoke/CasgrainSmoke/: CasgrainSmokeApp.swift
fixtures/ios-smoke/CasgrainSmoke.xcodeproj/: project.pbxproj
fixtures/ios-smoke/CasgrainSmokeUITests/: CasgrainSmokeUITests.swift
scripts/: android_smoke_run_plan.py  cve_watch_report.py  ios_smoke.sh
tasks/: initial-roadmap.md
tests/scripts/: android_smoke_run_plan.py  ios_smoke.sh  ios_smoke_run_plan.py  test_android_smoke_issue_sync.py  test_android_smoke_reliability_window.py  test_coverage_regression_check.py  test_coverage_report.py  test_cve_watch_alert_gate.py  test_cve_watch_issue_sync.py  test_cve_watch_report.py  test_cve_watch_workflow_contract.py  test_dependabot_alerts_report.py  test_mobile_smoke_workflow_triggers.py  test_runner_host_review_report.py  test_security_tooling_cve_watch.py
(+112 files in other folders)
