[workspace]
members = [
  "crates/mar_domain",
  "crates/mar_application",
  "crates/mar_compiler",
  "crates/mar_runner",
  "crates/mar_cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Daniel Roussel and contributors"]
repository = "https://github.com/drousselbot/casgrain"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
