[workspace]
members = [
  "crates/domain",
  "crates/application",
  "crates/compiler",
  "crates/runner",
  "crates/ios",
  "crates/android",
  "crates/casgrain",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Daniel Roussel and contributors"]
repository = "https://github.com/drousselhq/casgrain"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
