[package]
name = "casgrain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "casgrain"
path = "src/main.rs"

[dependencies]
android = { path = "../android" }
application = { path = "../application" }
compiler = { path = "../compiler" }
domain = { path = "../domain" }
ios = { path = "../ios" }
runner = { path = "../runner" }
serde_json.workspace = true

[lints]
workspace = true
