[package]
name = "compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
application = { path = "../application" }
domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
