[package]
name = "mar_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
mar_application = { path = "../mar_application" }
mar_compiler = { path = "../mar_compiler" }
mar_domain = { path = "../mar_domain" }
mar_runner = { path = "../mar_runner" }
serde_json.workspace = true
