[package]
name = "mar_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "casgrain"
path = "src/main.rs"

[dependencies]
mar_android = { path = "../mar_android" }
mar_application = { path = "../mar_application" }
mar_compiler = { path = "../mar_compiler" }
mar_domain = { path = "../mar_domain" }
mar_ios = { path = "../mar_ios" }
mar_runner = { path = "../mar_runner" }
serde_json.workspace = true
