[package]
name = "mar_compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
mar_application = { path = "../mar_application" }
mar_domain = { path = "../mar_domain" }
serde.workspace = true
serde_json.workspace = true
